# projeto_tw

./: .gitignore  Dockerfile  README.md  db.sqbpro  db.sqlite3  db.sqlite3-journal  db_bjb.sqlite3  docker-compose.yml  pyproject.toml
commentary/: admin.py  urls.py
commentary/forms/: __init__.py  commentary_form.py
commentary/migrations/: 0001_initial.py  0002_commentary_date_commentary.py  0003_alter_commentary_date_commentary.py  0004_alter_commentary_date_commentary.py  0005_alter_commentary_date_commentary.py  0006_alter_commentary_date_commentary.py  0007_alter_commentary_date_commentary.py  0008_alter_commentary_date_commentary.py
commentary/models/: commentary.py
commentary/viewsets/: __init__.py  commentary_viewset.py
follower/: admin.py  viewss.py
follower/migrations/: 0001_initial.py
follower/models/: follower.py
follower/serializers/: follower_serializer.py
follower/templates/: follower.html
follower/viewsets/: follower_viewset.py
login/: admin.py  factories.py
login/migrations/: 0001_initial.py
login/models/: login.py
login/serializers/: __init__.py  login_serializer.py
login/viewsets/: login_viewset.py
postagem/: admin.py  apps.py  factories.py
postagem/migrations/: 0001_initial.py
postagem/models/: __init__.py  postagem.py  seguindo.py
postagem/serializers/: __init__.py  postagem_serializer.py
postagem/viewsets/: __init__.py  postagem_viewset.py
posts/: admin.py  urls.py  viewss.py
posts/forms/: __init__.py  posts_form.py
twitter/: settings.py
user/: urls.py  viewss.py
usuario/: admin.py  factories.py
(+50 files in other folders)
